--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     </head>
 
     <body>
-        
+        <div class="header"></div>
+
+        <div class="hero"></div>
+
+        <div class="top"></div>
+
+        <div class="middle"></div>
+
+        <div class="bottom"></div>
+
+        <div class="footer"></div>
+
     </body>
 </html>
