--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     </head>
 
     <body>
-        <div class="header"></div>
+        <div class="header">
+            <div class="logo">Header Logo</div>
+            <a href="#">header link one</a>
+            <a href="#">header link two</a>
+            <a href="#">header link three</a>
+        </div>
 
         <div class="hero"></div>
 
