--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
             <a href="#">header link three</a>
         </div>
 
-        <div class="hero"></div>
+        <div class="hero">
+            <div>This website is awesome</div>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
+                contrast</p>
+            <button>Sign Up</button>
+            <img src="#" alt="Placeholder image">
+        </div>
 
         <div class="top"></div>
 
