Add basic content elements to top class

--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
 
         <div class="hero">
             <div>This website is awesome</div>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
-                contrast</p>
+            <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
+                contrast</div>
             <button>Sign Up</button>
             <img src="#" alt="Placeholder image">
         </div>
 
-        <div class="top"></div>
+        <div class="top">
+            <div class="headline">Some random information.</div>
+            <div class="item"></div>    
+        </div>
 
         <div class="middle"></div>
 
