--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
             <div class="item"></div>    
         </div>
 
-        <div class="middle"></div>
+        <div class="middle">
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know
+                is that it looks nice.</div>
+            <div class="author">-Thor, God of Thunder</div>
+        </div>
 
         <div class="bottom"></div>
 
