--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
             <div class="author">-Thor, God of Thunder</div>
         </div>
 
-        <div class="bottom"></div>
+        <div class="bottom">
+            <div class="card">
+                <div class="cardHeadline">Call to action! It's time!</div>
+                <div class="cardText">Sign up for our product by clicking that button right over there!</div>
+                <button>Sign up</button>
+            </div>
+        </div>
 
         <div class="footer"></div>
 
