--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
             </div>
         </div>
 
-        <div class="footer"></div>
+        <div class="footer">
+            <div class="copyright">Copyright @ The Odin Project 2021</div>
+        </div>
 
     </body>
 </html>
