--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
         </div>
 
         <div class="hero">
+            <div class="awesome">
             <div>This website is awesome</div>
             <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
                 contrast</div>
             <button>Sign Up</button>
+            </div>
             <img src="#" alt="Placeholder image">
         </div>
 
