Add classes inside hero container

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
         <div class="hero">
             <div class="awesome">
-            <div>This website is awesome</div>
-            <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
+            <div class="heroHeadline">This website is awesome</div>
+            <div class="heroText">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
                 contrast</div>
             <button>Sign Up</button>
             </div>
