Add missing class for a button inside hero

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="heroHeadline">This website is awesome</div>
             <div class="heroText">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
                 contrast</div>
-            <button>Sign Up</button>
+            <button class="signup">Sign Up</button>
             </div>
             <img src="#" alt="Placeholder image">
         </div>
