Add missing content to top container and edit div containers isnide to prepare section for flexbox

--- a/index.html
+++ b/index.html
@@ -28,7 +28,28 @@
 
         <div class="top">
             <div class="headline">Some random information.</div>
-            <div class="item"></div>    
+
+            <div class="itemCointainer">
+                <div class="item">
+                    <div class="placeholder"></div>
+                    <div class="itemText">this is some subtext under an illustration or image</div>
+                </div>
+                
+                <div class="item">
+                    <div class="placeholder"></div>
+                    <div class="itemText">this is some subtext under an illustration or image</div>
+                </div>    
+
+                <div class="item">
+                    <div class="placeholder"></div>
+                    <div class="itemText">this is some subtext under an illustration or image</div>
+                </div>    
+
+                <div class="item">
+                    <div class="placeholder"></div>
+                    <div class="itemText">this is some subtext under an illustration or image</div>
+                </div>  
+            </div>  
         </div>
 
         <div class="middle">
