Fix a typo in class name

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="top">
             <div class="headline">Some random information.</div>
 
-            <div class="itemCointainer">
+            <div class="itemContainer">
                 <div class="item">
                     <div class="placeholder"></div>
                     <div class="itemText">this is some subtext under an illustration or image</div>
