Update bottom containers for flexbox and add missing class to bottom button

--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
 
         <div class="bottom">
             <div class="card">
-                <div class="cardHeadline">Call to action! It's time!</div>
-                <div class="cardText">Sign up for our product by clicking that button right over there!</div>
-                <button>Sign up</button>
+                <div class="left">
+                    <div class="cardHeadline">Call to action! It's time!</div>
+                    <div class="cardText">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button class="bottomSignup">Sign up</button>
             </div>
         </div>
 
